6/14 runner file start

--- a/config.json
+++ b/config.json
@@ -1,4 +1,11 @@
 {
-	"asin" : ["B0BGT61797", "B0BSVMLVTD", "B0BG92GY61", "B0BGP8FGNZ"],
-	"accepted merchants" : ["ATVPDKIKX0DER"]
+	"asin" : ["B0BGT61797", "B0BSVMLVTD", "B0BG92GY61", "B0BGP8FGNZ", "B09D1VF7F8", "B0BWNFZJNZ", "B0BGJQBW6Z"],
+	"accepted merchants" : ["ATVPDKIKX0DER"],
+	"headers" : 
+	{
+		"Accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7", 
+        "Accept-Encoding": "gzip, deflate, br", 
+        "Accept-Language": "en-US,en;q=0.9,ru-RU;q=0.8,ru;q=0.7",
+        "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36"
+	}
 }
